fix(comments): fix designs that made everything have too many gaps

--- a/docs/css/issue.css
+++ b/docs/css/issue.css
@@ -44,12 +44,12 @@
 	}
 	
 	.issue-new-comment .text-field {
-		padding: calc(var(--unit-space) * 2);
-		box-sizing: border-box;
+		margin-bottom: calc(var(--unit-space) * 2);
 	}
 	
 	.issue-new-comment .form-upload {
-		margin: calc(var(--unit-space) * 2);
+		padding: calc(var(--unit-space) * 2);
+		margin-bottom: calc(var(--unit-space) * 2);
 	}
 	
 	.issue-new-comment .comment-submit {
